Corrected some misalignment in brackets and added empty topic

--- a/src/assets/scss/_topic.scss
+++ b/src/assets/scss/_topic.scss
@@ -1,15 +1,14 @@
 .topic{
     display: flex;
-    max-width: 60%;
+    width: 60%;
     
     @media screen and (min-width: $screen-sm)  and (max-width: $screen-xl) {
-        max-width: 70%;
+        width: 70%;
     }
 
     @media screen and (min-width: 0px)  and (max-width: $screen-sm) {
-        max-width: 85%;
+        width: 85%;
     }
-
 
     .title{
         text-align: left;
@@ -18,6 +17,7 @@
 
     .body{
         text-align: justify;
+        width: 100%;
     }
 
     .header{
@@ -50,15 +50,8 @@
     }
 
     .bracket{
-        width: 2rem;
-
-        @media screen and (min-width: 0px) and (max-width: $screen-lg) {
-            width: 5rem;
-        }
-
-        @media screen and (min-width: $screen-lg) and (max-width: $screen-2xl) {
-            width: 3rem;
-        }
+        width: 1rem;
+        flex-shrink: 0;
 
         margin-right: 1rem;
         margin-top: 2.2rem;
@@ -100,13 +93,12 @@
 
     .post-percentage-bar{
         display: flex;
-        // font-size: 1.25rem;
         height: 2.5rem;
         margin-bottom: 0.5rem;
         justify-content: space-between;
         background-color: $default-font-color;
-        color: #1F0D00;
-        padding: 0 1rem;
+        color: $default-bg;
+        padding: 0 1rem 0 0.5rem;
         align-content: center;
         border-radius: 0 0.75rem 0.75rem 0;
 
@@ -118,10 +110,20 @@
 
     .read-more{
         display: flex;
-        justify-content: end;
+        width: min-content;
+        text-decoration: none;
+        color: inherit;
+        margin-left: auto;
         font-weight: bold;
         margin-bottom: 1rem;
-        cursor: pointer;
+    }
+
+    .no-response{
+        height: 5rem;
+        display: flex;
+        justify-content:center;
+        align-items:center;
+        font-size: 1.25rem
     }
 }
 
